fix - card spacing

--- a/sass/main.css
+++ b/sass/main.css
@@ -123,7 +123,8 @@ select {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 78px;
 }
 
 .search-tag-recipes {
